data/derived/sp14/progs/unify/prog2266.ml.out
Characters 30-38:
  let fixpoint (f,b) = wwhile ( not(f b),b);;
                                ^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
